--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Heartfield</h1>
+			<h1>Heartfield! Click to reset hearts</h1>
 		</header>
 			<section id="content">
 				<canvas id="Starfield" data-processing-sources="Starfield.pde">
